[package]
name = "axum-health-service"
version = "0.1.0"
edition = "2024"

[dependencies]
mysql = "25.0.1"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
log4rs = "1.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"
anyhow = "1.0"
toml = "0.8"
lockfreehashmap="0.1"
